# ueforth

./: .gitignore  .gitmodules  BUILD  Makefile  README-Ubuntu.MD  README.md  build.ninja  configure.py  eforth.fs  forth.c  jammy-dependencies.sh
circleforth/: README.md  circle.fs  compound.fs
common/: all_tests.fs  altcase.fs  ansi.fs  assembler.fs  base_tests.fs  bits.h  blocks.fs  boot.fs  calling.h  calls.h  case.fs  case_tests.fs  code.fs  comments.fs  conditionals.fs  core.h  desktop.fs  doloop_tests.fs  editor.fs  extra.fs  extra1.fs  extra2.fs  extra3.fs  extra_opcodes.h  fault_tests.fs  filetools.fs  fini.fs  float_tests.fs  floats.fs  floats.h  forth_namespace_tests.fs  graphics.fs  graphics_test.fs  graphics_utils.fs  grf.fs  grf_utils.fs  heart.fs  including.fs  interp.h  io.fs  (+29 more)
esp32/: BUILD  ESP32forth.ino  README-optional.txt  README.txt  assemblers.h  autoboot.fs  bindings.fs  bterm.fs  builtins.cpp  builtins.h  camera.fs  esp32_all_tests.fs  esp32_boot.fs  faults.h  main.cpp  optionals.fs  options.h  platform.fs  platform.h  print-builtins.cpp  riscv-assembler.fs  sim_main.cpp  template.ino  timers.fs  web_interface.fs  xtensa-assembler.fs
examples/: asm_xtensa.fs  bezier_test.fs  boxes.fs  code_x64.fs  code_xtensa.fs  complex.fs  curl.fs  espnow.fs  heart_game.fs  heart_graph.fs  into.fs  (+4 more)
pico-ice/: BUILD  CMakeLists.txt  README.txt  allocation.fs  autoboot.fs  builtins.h  main.c  pico_ice_boot.fs  platform.fs
pico-ice/ice40/: flyclasses.fs  ice40.fs  ice40_allocation.fs  ice40_config.fs  ice40_layout.fs  ice40_storage.fs  ice40_synthesis.fs
(+296 files in other folders)
